<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="50dp"
            android:text="@string/inicio_sesion_title"
            android:textColor="@color/color_textos"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/inicio_sesion_correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/inicio_sesion_clave"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:gravity="right"
            android:onClick="goToRecuperarActivity"
            android:padding="10dp"
            android:text="@string/inicio_sesion_olvido"
            android:textColor="#1c63b8" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/press_button"
            android:onClick="goToDashboardActivity"
            android:text="@string/inicio_sesion_iniciar"
            android:textColor="@color/letras" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/press_button"
            android:drawableLeft="@drawable/facebook"
            android:text="@string/inicio_sesion_facebook"
            android:textColor="@color/letras" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/press_button"
            android:drawableLeft="@drawable/google"
            android:text="@string/inicio_sesion_gmail"
            android:textColor="@color/letras" />
    </LinearLayout>
</ScrollView>