<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/reservar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/press_button"
        android:onClick="goToPrincipalActivity"
        android:text="@string/conexion_btn_reintentar"
        android:textColor="@color/letras"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="184dp"
        android:gravity="center"
        android:text="@string/conexion_text1"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="295dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="282dp"
        android:gravity="center"
        android:text="@string/conexion_text2"
        android:textSize="18sp" />
</RelativeLayout>